fix bug with z-index

--- a/src/components/nav/burgerMenu.scss
+++ b/src/components/nav/burgerMenu.scss
@@ -21,15 +21,14 @@
     position: absolute;
     background-color: v.$white;
     padding: 30px;
-    top: 55px;
+    top: 65px;
     left: 0;
     width: 90%;
     box-shadow: 0px 15px 10px -15px  rgba(0, 0, 0, 0.233);
-    z-index: -1;
 
     li {
         color: v.$text-color;
-        padding: 20px;
+        padding: 10px 20px;
         display: flex;
         align-items: center;
         gap: 20px;
